samples/_failures_safe/1761531281_a31d3b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f5932b0c.c: In function ‘main’:
./samples/SAFE/__tmp_f5932b0c.c:145:16: error: missing terminating " character
  145 |         printf("Failed to read second
      |                ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f5932b0c.c:145:9: error: expected expression at end of input
  145 |         printf("Failed to read second
      |         ^~~~~~
./samples/SAFE/__tmp_f5932b0c.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f5932b0c.c:145:9: error: expected declaration or statement at end of input
